# team-tokens-api

./: Cargo.toml  README.md
.devcontainer/: dependencies.sh  devcontainer.json
config/: config.json
db/: Cargo.toml
db/migrations/: 0001_teams_table.sql
db/src/: lib.rs
migrations/: 0001_sync_01_teams_table.sql  0001_users_table.sql  0002_teams_table.sql  0004_teams_table.sql
server/: Cargo.toml
server/src/: main.rs
server/src/routes/: mod.rs  team.rs
src/: main.rs
src/db/: db.rs
src/routes/: healthz.rs  mod.rs  team.rs  user.rs
src/utils/: password.rs  token.rs
utils/: docker-compose.yml
