[package]
name = "team-tokens-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
chrono = "0.4.39"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio","postgres","chrono"] }
