[package]
name = "team-tokens-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
chrono = "0.4.39"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio","postgres","chrono"] }
env_logger = "0.11.6"
log = "0.4.22"
argon2 = "0.5.3"
regex = "1.11.1"
validator = {version = "0.20.0", features = ["derive"]}
jwt-simple = "0.12.11"
http = "1.2.0"
